# bouncer

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  docs.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
docs/: ABOUT.md  AUTHENTICATION_POLICIES.md  BOUNCER_TOKEN.md  CREATING_POLICIES.md  POLICY_ROUTES.md  database_policy_integration.md
examples/database/: bouncer.config.yaml
examples/default/: bouncer.config.yaml
examples/managed/: bouncer.config.yaml
examples/simple-custom-policy/: Cargo.toml  README.md  config.yaml
examples/simple-custom-policy/src/: main.rs
src/: config.rs  lib.rs  main.rs  server.rs
src/database/: errors.rs  mod.rs
src/policy/: macros.rs  middleware.rs  mod.rs  registry.rs  routes.rs  traits.rs
src/policy/providers/: logging.rs  mod.rs
src/policy/providers/bouncer/: mod.rs
src/policy/providers/bouncer/auth/: bearer.rs  mod.rs
src/policy/providers/bouncer/auth/bearer/: mod.rs  v1.rs  v1_managed.rs
src/policy/providers/bouncer/auth_backup/: bearer.rs
src/policy/providers/bouncer/authentication/bearer/: mod.rs  v1.rs
src/policy/providers/bouncer/authorization/rbac/: mod.rs  v1.rs
tests/: test_bouncer_token.sh
