[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"
description = "Deploy backends in minutes, not months."
repository = "https://github.com/http-samc/bouncer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
