[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"
description = "Deploy backends in minutes, not months."
repository = "https://github.com/http-samc/bouncer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
axum-server = "0.7.2"
clap = { version = "4.5.35", features = ["derive"] }
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
