[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"
description = "Deploy backends in minutes, not months."
repository = "https://github.com/http-samc/bouncer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
axum-server = "0.7.2"
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.4", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
libloading = "0.8.0"
once_cell = "1.18.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Database dependencies
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "mysql", "macros"], optional = true }
redis = { version = "0.24.0", features = ["tokio-comp"], optional = true }
mongodb = { version = "3.2.3", optional = true }

[features]
default = ["all-db"]
postgres = ["sqlx"]
mysql = ["sqlx"] 
sql = ["postgres", "mysql"]
redis = ["dep:redis"]
mongo = ["mongodb"]
all-db = ["sql", "redis", "mongo"]
